[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Enemies/Bosses/Vertical Energy RayCast.gd" type="Script" id=1]
[ext_resource path="res://ArtAssets/Circle.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.651934, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="EnergyBeam" type="RayCast2D"]
enabled = true
cast_to = Vector2( 0, 1000 )
script = ExtResource( 1 )

[node name="Line" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 1000 )
width = 2.0
default_color = Color( 1, 0.4, 0.4, 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 32.0
default_color = Color( 1, 1, 1, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
amount = 16
lifetime = 0.3
local_coords = false
texture = ExtResource( 2 )
direction = Vector2( -1, 0 )
spread = 68.12
gravity = Vector2( 0, 180 )
initial_velocity = 100.0
scale_amount = 0.05
scale_amount_random = 0.01
color_ramp = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
